# serializer version: 1
# name: test_system_snapshot[default][control_system]
  '''
  active_faults: []
  allowed_system_modes:
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: HeatingOff
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: Auto
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: AutoWithReset
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 1.00:00:00
      system_mode: AutoWithEco
      timing_mode: Duration
      timing_resolution: 01:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: Away
      timing_mode: Period
      timing_resolution: 1.00:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: DayOff
      timing_mode: Period
      timing_resolution: 1.00:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: Custom
      timing_mode: Period
      timing_resolution: 1.00:00:00
  id: '3432522'
  model_type: EvoTouch
  system_mode: AutoWithEco
  system_mode_status:
      isPermanent: true
      mode: AutoWithEco
  
  '''
# ---
# name: test_system_snapshot[default][gateway]
  '''
  active_faults: []
  id: '2499896'
  is_wi_fi: false
  mac: 00D02DEE4E56
  
  '''
# ---
# name: test_system_snapshot[default][hot_water]
  '''
  active_faults: []
  allowed_modes:
  - FollowSchedule
  - PermanentOverride
  - TemporaryOverride
  id: '3933910'
  mode: PermanentOverride
  name: Domestic Hot Water
  schedule_capabilities:
      max_switchpoints_per_day: 6
      min_switchpoints_per_day: 1
      timing_resolution: 00:10:00
  state: 'Off'
  state_capabilities:
      allowed_modes:
      - FollowSchedule
      - PermanentOverride
      - TemporaryOverride
      allowed_states:
      - 'On'
      - 'Off'
      max_duration: 1.00:00:00
      timing_resolution: 00:10:00
  state_status:
      mode: PermanentOverride
      state: 'Off'
  temperature: 23.0
  temperature_status:
      is_available: true
      temperature: 23.0
  
  '''
# ---
# name: test_system_snapshot[default][location]
  '''
  country: UnitedKingdom
  id: '2738909'
  location_owner:
      firstname: David
      lastname: '********'
      user_id: '2263181'
      username: nobody@nowhere.com
  location_type: Residential
  name: My Home
  time_tone:
      current_offset_minutes: 60
      display_name: (UTC+00:00) Dublin, Edinburgh, Lisbon, London
      offset_minutes: 0
      supports_daylight_saving: true
      time_zone_id: GMTStandardTime
  use_daylight_save_switching: true
  
  '''
# ---
# name: test_system_snapshot[default][zones]
  '''
  '3432521':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432521'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: HeatingZone
      name: Dead Zone
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 5.0
      target_cool_temperature: null
      target_heat_temperature: 5.0
      temperature: null
      temperature_status:
          is_available: false
      zone_type: RadiatorZone
  '3432576':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432576'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Main Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.0
      temperature_status:
          is_available: true
          temperature: 19.0
      zone_type: RadiatorZone
  '3432577':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432577'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Front Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.0
      temperature_status:
          is_available: true
          temperature: 19.0
      zone_type: RadiatorZone
  '3432578':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432578'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Kitchen
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 20.0
      temperature_status:
          is_available: true
          temperature: 20.0
      zone_type: RadiatorZone
  '3432579':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432579'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Bathroom Dn
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.0
      target_cool_temperature: null
      target_heat_temperature: 16.0
      temperature: 20.0
      temperature_status:
          is_available: true
          temperature: 20.0
      zone_type: RadiatorZone
  '3432580':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432580'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Main Bedroom
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.0
      target_cool_temperature: null
      target_heat_temperature: 16.0
      temperature: 21.0
      temperature_status:
          is_available: true
          temperature: 21.0
      zone_type: RadiatorZone
  '3449703':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449703'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Kids Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.5
      temperature_status:
          is_available: true
          temperature: 19.5
      zone_type: RadiatorZone
  '3449740':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449740'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Bathroom Up
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.5
      target_cool_temperature: null
      target_heat_temperature: 16.5
      temperature: 21.5
      temperature_status:
          is_available: true
          temperature: 21.5
      zone_type: RadiatorZone
  '3450733':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3450733'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: HeatingZone
      name: Spare Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 14.0
      target_cool_temperature: null
      target_heat_temperature: 14.0
      temperature: 19.5
      temperature_status:
          is_available: true
          temperature: 19.5
      zone_type: RadiatorZone
  
  '''
# ---
# name: test_system_snapshot[hass_118169][control_system]
  '''
  active_faults: []
  allowed_system_modes:
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: HeatingOff
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: Auto
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: AutoWithReset
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 1.00:00:00
      system_mode: AutoWithEco
      timing_mode: Duration
      timing_resolution: 01:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: Away
      timing_mode: Period
      timing_resolution: 1.00:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: DayOff
      timing_mode: Period
      timing_resolution: 1.00:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: Custom
      timing_mode: Period
      timing_resolution: 1.00:00:00
  id: '3432522'
  model_type: EvoTouch
  system_mode: AutoWithEco
  system_mode_status:
      isPermanent: true
      mode: AutoWithEco
  
  '''
# ---
# name: test_system_snapshot[hass_118169][gateway]
  '''
  active_faults: []
  id: '2499896'
  is_wi_fi: false
  mac: 00D02DEE4E56
  
  '''
# ---
# name: test_system_snapshot[hass_118169][hot_water]
  '''
  active_faults: []
  allowed_modes:
  - FollowSchedule
  - PermanentOverride
  - TemporaryOverride
  id: '3933910'
  mode: PermanentOverride
  name: Domestic Hot Water
  schedule_capabilities:
      max_switchpoints_per_day: 6
      min_switchpoints_per_day: 1
      timing_resolution: 00:10:00
  state: 'Off'
  state_capabilities:
      allowed_modes:
      - FollowSchedule
      - PermanentOverride
      - TemporaryOverride
      allowed_states:
      - 'On'
      - 'Off'
      max_duration: 1.00:00:00
      timing_resolution: 00:10:00
  state_status:
      mode: PermanentOverride
      state: 'Off'
  temperature: 23.0
  temperature_status:
      is_available: true
      temperature: 23.0
  
  '''
# ---
# name: test_system_snapshot[hass_118169][location]
  '''
  country: UnitedKingdom
  id: '2738909'
  location_owner:
      firstname: David
      lastname: '********'
      user_id: '2263181'
      username: nobody@nowhere.com
  location_type: Residential
  name: My Home
  time_tone:
      current_offset_minutes: 60
      display_name: (UTC+00:00) Dublin, Edinburgh, Lisbon, London
      offset_minutes: 0
      supports_daylight_saving: true
      time_zone_id: GMTStandardTime
  use_daylight_save_switching: true
  
  '''
# ---
# name: test_system_snapshot[hass_118169][zones]
  '''
  '3432521':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432521'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: HeatingZone
      name: Dead Zone
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 5.0
      target_cool_temperature: null
      target_heat_temperature: 5.0
      temperature: null
      temperature_status:
          is_available: false
      zone_type: RadiatorZone
  '3432576':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432576'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Main Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.0
      temperature_status:
          is_available: true
          temperature: 19.0
      zone_type: RadiatorZone
  '3432577':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432577'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Front Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.0
      temperature_status:
          is_available: true
          temperature: 19.0
      zone_type: RadiatorZone
  '3432578':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432578'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Kitchen
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 20.0
      temperature_status:
          is_available: true
          temperature: 20.0
      zone_type: RadiatorZone
  '3432579':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432579'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Bathroom Dn
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.0
      target_cool_temperature: null
      target_heat_temperature: 16.0
      temperature: 20.0
      temperature_status:
          is_available: true
          temperature: 20.0
      zone_type: RadiatorZone
  '3432580':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432580'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Main Bedroom
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.0
      target_cool_temperature: null
      target_heat_temperature: 16.0
      temperature: 21.0
      temperature_status:
          is_available: true
          temperature: 21.0
      zone_type: RadiatorZone
  '3449703':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449703'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Kids Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 17.0
      target_cool_temperature: null
      target_heat_temperature: 17.0
      temperature: 19.5
      temperature_status:
          is_available: true
          temperature: 19.5
      zone_type: RadiatorZone
  '3449740':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449740'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Bathroom Up
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 16.5
      target_cool_temperature: null
      target_heat_temperature: 16.5
      temperature: 21.5
      temperature_status:
          is_available: true
          temperature: 21.5
      zone_type: RadiatorZone
  '3450733':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3450733'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: HeatingZone
      name: Spare Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 14.0
      target_cool_temperature: null
      target_heat_temperature: 14.0
      temperature: 19.5
      temperature_status:
          is_available: true
          temperature: 19.5
      zone_type: RadiatorZone
  
  '''
# ---
# name: test_system_snapshot[system_002][control_system]
  '''
  active_faults: []
  allowed_system_modes:
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: HeatingOff
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: Auto
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: AutoWithReset
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 1.00:00:00
      system_mode: AutoWithEco
      timing_mode: Duration
      timing_resolution: 01:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: Away
      timing_mode: Period
      timing_resolution: 1.00:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: DayOff
      timing_mode: Period
      timing_resolution: 1.00:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: Custom
      timing_mode: Period
      timing_resolution: 1.00:00:00
  id: '3432522'
  model_type: EvoTouch
  system_mode: Auto
  system_mode_status:
      isPermanent: true
      mode: Auto
  
  '''
# ---
# name: test_system_snapshot[system_002][gateway]
  '''
  active_faults: []
  id: '2499896'
  is_wi_fi: false
  mac: 00D02DEE4E56
  
  '''
# ---
# name: test_system_snapshot[system_002][hot_water]
  '''
  active_faults:
  -   faultType: DHWSensorCommunicationLost
      since: '2023-11-30T18:48:40'
  allowed_modes:
  - FollowSchedule
  - PermanentOverride
  - TemporaryOverride
  id: '3933910'
  mode: FollowSchedule
  name: Domestic Hot Water
  schedule_capabilities:
      max_switchpoints_per_day: 6
      min_switchpoints_per_day: 1
      timing_resolution: 00:10:00
  state: 'Off'
  state_capabilities:
      allowed_modes:
      - FollowSchedule
      - PermanentOverride
      - TemporaryOverride
      allowed_states:
      - 'On'
      - 'Off'
      max_duration: 1.00:00:00
      timing_resolution: 00:10:00
  state_status:
      mode: FollowSchedule
      state: 'Off'
  temperature: null
  temperature_status:
      is_available: false
  
  '''
# ---
# name: test_system_snapshot[system_002][location]
  '''
  country: UnitedKingdom
  id: '2738909'
  location_owner:
      firstname: David
      lastname: '********'
      user_id: '2263181'
      username: nobody@nowhere.com
  location_type: Residential
  name: My Home
  time_tone:
      current_offset_minutes: 60
      display_name: (UTC+00:00) Dublin, Edinburgh, Lisbon, London
      offset_minutes: 0
      supports_daylight_saving: true
      time_zone_id: GMTStandardTime
  use_daylight_save_switching: true
  
  '''
# ---
# name: test_system_snapshot[system_002][zones]
  '''
  '3432521':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432521'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: HeatingZone
      name: Dead Zone
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 5.0
      target_cool_temperature: null
      target_heat_temperature: 5.0
      temperature: null
      temperature_status:
          is_available: false
      zone_type: RadiatorZone
  '3432576':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432576'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: HeatingZone
      name: Main Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 5.0
      target_cool_temperature: null
      target_heat_temperature: 5.0
      temperature: 17.0
      temperature_status:
          is_available: true
          temperature: 17.0
      zone_type: RadiatorZone
  '3432577':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432577'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Front Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 20.6
      target_cool_temperature: null
      target_heat_temperature: 20.6
      temperature: 20.5
      temperature_status:
          is_available: true
          temperature: 20.5
      zone_type: RadiatorZone
  '3432578':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432578'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Kitchen
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 20.0
      target_cool_temperature: null
      target_heat_temperature: 20.0
      temperature: 20.0
      temperature_status:
          is_available: true
          temperature: 20.0
      zone_type: RadiatorZone
  '3432579':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432579'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Bathroom Dn
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 18.5
      target_cool_temperature: null
      target_heat_temperature: 18.5
      temperature: 17.5
      temperature_status:
          is_available: true
          temperature: 17.5
      zone_type: RadiatorZone
  '3432580':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3432580'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: TemporaryOverride
      model_type: HeatingZone
      name: Main Bedroom
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: TemporaryOverride
          targetHeatTemperature: 20.5
          until: '2023-11-30T22:10:00Z'
      target_cool_temperature: null
      target_heat_temperature: 20.5
      temperature: 21.0
      temperature_status:
          is_available: true
          temperature: 21.0
      zone_type: RadiatorZone
  '3449703':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449703'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Kids Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 18.6
      target_cool_temperature: null
      target_heat_temperature: 18.6
      temperature: 19.5
      temperature_status:
          is_available: true
          temperature: 19.5
      zone_type: RadiatorZone
  '3449740':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3449740'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: FollowSchedule
      model_type: HeatingZone
      name: Bathroom Up
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: FollowSchedule
          targetHeatTemperature: 19.0
      target_cool_temperature: null
      target_heat_temperature: 19.0
      temperature: 19.0
      temperature_status:
          is_available: true
          temperature: 19.0
      zone_type: RadiatorZone
  '3450733':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3450733'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: HeatingZone
      name: Spare Room
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 1
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 10.0
      target_cool_temperature: null
      target_heat_temperature: 10.0
      temperature: 15.0
      temperature_status:
          is_available: true
          temperature: 15.0
      zone_type: RadiatorZone
  
  '''
# ---
# name: test_system_snapshot[system_004][control_system]
  '''
  active_faults: []
  allowed_system_modes:
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: Auto
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 1.00:00:00
      system_mode: AutoWithEco
      timing_mode: Duration
      timing_resolution: 01:00:00
  -   can_be_permanent: true
      can_be_temporary: true
      max_duration: 99.00:00:00
      system_mode: Away
      timing_mode: Period
      timing_resolution: 1.00:00:00
  -   can_be_permanent: true
      can_be_temporary: false
      system_mode: HeatingOff
  id: '3935923'
  model_type: EvoTouch
  system_mode: Auto
  system_mode_status:
      isPermanent: true
      mode: Auto
  
  '''
# ---
# name: test_system_snapshot[system_004][gateway]
  '''
  active_faults: []
  id: '2820628'
  is_wi_fi: false
  mac: 00D02DF114FD
  
  '''
# ---
# name: test_system_snapshot[system_004][hot_water]
  '''
  {}
  
  '''
# ---
# name: test_system_snapshot[system_004][location]
  '''
  country: CzechRepublic
  id: '2664492'
  location_owner:
      firstname: Jan
      lastname: '********'
      user_id: '2224990'
      username: nobody@nowhere.com
  location_type: Residential
  name: Summer House
  time_tone:
      current_offset_minutes: 120
      display_name: "(UTC+01:00) Praha, Bratislava, Budape\u0161\u0165, B\u011Blehrad,\
          \ Lubla\u0148"
      offset_minutes: 60
      supports_daylight_saving: true
      time_zone_id: CentralEuropeStandardTime
  use_daylight_save_switching: true
  
  '''
# ---
# name: test_system_snapshot[system_004][zones]
  '''
  '3935922':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '3935922'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: RoundWireless
      name: Name 3935922
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 0
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 15.0
      target_cool_temperature: null
      target_heat_temperature: 15.0
      temperature: 21.5
      temperature_status:
          is_available: true
          temperature: 21.5
      zone_type: Thermostat
  '4368406':
      active_faults: []
      allowed_setpoint_modes:
      - PermanentOverride
      - FollowSchedule
      - TemporaryOverride
      id: '4368406'
      max_heat_setpoint: 35.0
      min_heat_setpoint: 5.0
      mode: PermanentOverride
      model_type: RoundWireless
      name: Name 3935922
      schedule_capabilities:
          max_switchpoints_per_day: 6
          min_switchpoints_per_day: 0
          setpoint_value_resolution: 0.5
          timing_resolution: 00:10:00
      setpoint_capabilities:
          allowed_setpoint_modes:
          - PermanentOverride
          - FollowSchedule
          - TemporaryOverride
          can_control_cool: false
          can_control_heat: true
          max_duration: 1.00:00:00
          max_heat_setpoint: 35.0
          min_heat_setpoint: 5.0
          timing_resolution: 00:10:00
          value_resolution: 0.5
      setpoint_status:
          setpointMode: PermanentOverride
          targetHeatTemperature: 15.0
      target_cool_temperature: null
      target_heat_temperature: 15.0
      temperature: 23.0
      temperature_status:
          is_available: true
          temperature: 23.0
      zone_type: Thermostat
  
  '''
# ---
